test/org/midica/testfiles/failing/block-reset-tuplet.midica
INCLUDE inc/instruments.midica

( t=3:5
	0  c  /4
) t